--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^16.2.0",
     "react-audio-player": "^0.9.0",
+    "react-card-flip": "^0.2.1",
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.1",
     "spotify-web-api-js": "^0.23.0"
